--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 							<b>- После запуска устройство отправляет 10 смс на указанный номер<br></b>
 							<b>- Включение и выключение устройства выполняется с помощью тумблера<br></b>
 							<b>- Тестирование устройства показало, что чем ближе оно стоит к окну, тем больше смс из 10 получит адресат<br></b>
+							<b>- Детализация платежей показала, что со счёта списываются только деньги за полученные смс, за те, которые были отправлены (или как 
+							считается была попытка отправки) списание не выполняется<br></b>
 						 </p>
                     </div>
 
@@ -93,6 +95,12 @@
                     <div class="clearfix"></div>
                     <div class="clearfix"></div>
 		
+                    <div class="col-md-12 col-sm-12">
+						<h2>Схема устройства</h2>	
+                    </div>		
+					<div class="col-md-6 col-sm-6">
+                         <img src="images/im5_.png" class="img-responsive" alt="Portfolio">
+                    </div>
                     <div class="col-md-12 col-sm-12">
 						<h2>Фотографии устройства</h2>	
                     </div>
